--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,57 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Fody - auto-generated XML schema
+FodyWeavers.xsd
+
+**/*workspace.xml
+
+# docker-compose environment varialbes.
+**/*.env
+
+**/*launchSettings.json
+
+# MacOS
+**/.DS_Store
+
+### Rider ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+**/*.idea/**/workspace.xml
+**/*.idea/**/tasks.xml
+**/*.idea/**/usage.statistics.xml
+**/*.idea/**/dictionaries
+**/*.idea/**/shelf
+**/*.idea/**/misc.xml
+**/*.idea/**/sonarlint*
+
+# Generated files
+**/*.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+**/*.idea/**/dataSources/
+**/*.idea/**/dataSources.ids
+**/*.idea/**/dataSources.local.xml
+**/*.idea/**/sqlDataSources.xml
+**/*.idea/**/dynamic.xml
+**/*.idea/**/uiDesigner.xml
+**/*.idea/**/dbnavigator.xml
+
+# Gradle
+**/*.idea/**/gradle.xml
+**/*.idea/**/libraries
+
+# CMake
+cmake-build-*/
+
+# Mongo Explorer plugin
+**/*.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
