--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,8 @@
 root = true
 
 [*]
+charset = utf-8
+end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = tab
@@ -14,13 +16,6 @@ indent_style = space
 [*.cs]
 csharp_space_after_cast = true
 max_line_length = 140
-end_of_line = lf
 
 [*.md]
 trim_trailing_whitespace = false
-
-[*.sh]
-end_of_line = lf
-
-[*.{cmd, bat}]
-end_of_line = crlf
